test/errhandling/parallel/strict/coforall-throws-strict-error.good
coforall-throws-strict-error.chpl:3: In function 'test':
coforall-throws-strict-error.chpl:4: error: throwing call without try or try! (strict mode)
coforall-throws-strict-error.chpl:5: note:  is reason function throws
