test/errhandling/parallel/strict/coforall-throws-strict-error.chpl
proc test() {
  coforall i in 1..10 {
    throw new Error(i:string);
  }
}


test();
